updated working and ui
